# gens

./: .dockerignore  .editorconfig  .eslintrc.json  .eslintrc.yml  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  backend.py  conda_start.sh  config.py  coviz.py  docker-compose.yml  entrypoint.sh  gens.py  gulpfile.js  jest.config.js  main.mjs  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  start.sh  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: other-issues.md
.github/workflows/: docker_push.yml  keep_a_changelog.yml  preproc_docker_push.yml  preproc_stage_docker_push.yml  stage_docker_push.yml  tests.yml
api/: Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  __version__.py  config.py  exceptions.py  graph.py  io.py  main.py
api/app/cli/: __init__.py  base.py  index.py  load.py  view.py
api/app/crud/: __init__.py  annotation.py  chromosome.py  sample.py  transcript.py  utils.py  variant.py
api/app/db/: __init__.py  db.py  errors.py  index.py  utils.py
api/app/io/: __init__.py  annotation.py  coverage.py
api/app/models/: __init__.py  base.py  genomic.py  sample.py  variant.py
api/app/routers/: __init__.py  annotation.py  chromosome.py  root.py  sample.py  transcript.py  variant.py
api/tests/: test_io.py
assets/css/: about.scss  base.scss  error.scss  gens.scss  home.scss  landing.scss  navbar.scss
assets/js/: annotation.js  draw.js  fetch.js  fetch.test.js  genecanvas.js  genecanvas.test.js  gens.js  gens.test.js  helper.js  interactive.js  navigation.js  navigation.test.js  overview.js  (+4 more)
frontend/: .coverage  Dockerfile  Dockerfile.test  MANIFEST.in  gulpfile.js  package-lock.json  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
frontend/app/: api.py  app.py  config.py  io.py  models.py  profiler.py
frontend/app/blueprints/gens/: views.py
frontend/app/blueprints/gens/templates/: gens.html  info.html
frontend/app/blueprints/home/: views.py
frontend/app/blueprints/home/templates/: about.html  navbar.html
frontend/app/db/: __init__.py  annotation.py  chrom_sizes.py  samples.py
frontend/app/templates/: generic_exception_error.html  layout.html  sample_not_found.html
frontend/assets/css/: about.scss  defaults.scss  navbar.scss
frontend/assets/js/: helper.js  navigation.js
frontend/assets/js/draw/: shapes.js
frontend/assets/js/track/: annotation.js  transcript.js
gens/: __init__.py  api.py  app.py  cache.py  config.py  constants.py  db.py  errors.py  exceptions.py  gens.py  graph.py  io.py  utils.py  wsgi.py
modules/: genecanvas.mjs  interactive.mjs  overview.mjs
templates/: cov.html  gens.html  show_cov.html  show_cov.html~
tests/: test_io.py
utils/: Dockerfile  ascat2bed.sh  ascat_baf2bed.awk  generate_gens_data.pl  gvcfvaf.pl  init_database.sh  parse_annotations.py  update_annotations.py  update_chromsizes.py  update_db.py  update_transcripts.py
(+73 files in other folders)
