[project]
name = "gens_api"
dynamic = ["version"]
readme = "README.md"
description = "Gens API"
dependencies = [
    "setuptools",
    "wheel",
    "click",
    "fastapi[all]",
    "uvicorn[standard]",
    "pydantic-factories",
    "pymongo==4.5.0",
]
authors = [
  {name = "Markus Johansson", email = "markus.h.johansson@skane.se"},
]

[project.urls]
Repository = "https://github.com/Clinical-Genomics-Lund/gens.git"
Issues = "https://github.com/Clinical-Genomics-Lund/gens/issues"
Changelog = "https://github.com/Clinical-Genomics-Lund/gens/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "app.VERSION"}

[tool.isort]
profile = "black"