[metadata]
name = gens_app
version = attr: app.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    flask
    gunicorn
    flask-compress
    requests
    pydantic
    tabulate

[options.package_data]
app = *.css, *js

[options.extras_require]
dev = 
    black
    isort
    mypy
    pytest
    pytest-cov
    pytest-flask

[isort]
profile=black
